# trytond-account_invoice_posted2draft

./: CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  README  __init__.py  commission.py  invoice.py  messages.xml  move.py  payment.py  pyproject.toml  setup.py  tryton.cfg
doc/: index.rst
doc/es/: index.rst
locale/: ca.po  de.po  es.po  es_ES.po
tests/: __init__.py  scenario_invoice_posted2draft.rst  test_account_invoice_posted2draft.py  test_module.py
