[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trytonspain-account_invoice_posted2draft"
dependencies = [
    "trytond-account_invoice~=7.0.0",
]
version = "7.0"

dynamic = ["classifiers", "license", "readme", "description"]

[project.entry-points."trytond.modules"]
account_invoice_posted2draft = "trytond.modules.account_invoice_posted2draft"

[project.scripts]
[project.gui-scripts]
